--- a/index.html
+++ b/index.html
@@ -1,166 +1,74 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: 'Roboto';
-}
-
-header{
-    padding: 25px 0;
-    background-color: #ADD8E7;
-    font-size: 25px;
-}
-
-footer{
-    padding: 25px 0 0 0;
-    font-size: 25px;
-}
-
-.container{
-    margin: 0 auto;
-    max-width: 1350px;
-    padding: 15px;
-}
-
-.container-sm{
-    max-width: 1080px;
-    margin: 0 auto;
-    display: flex; 
-}
-
-.d-flex{
-    display: flex;
-}
-
-.justify-center{
-    justify-content: space-between;
-}
-
-.header-content ul{
-    list-style: none;
-    margin: 0 10px;
-}
-
-.header-content ul li{
-    display: inline-block;
-    margin: 0 10px;
-}
-
-/* Utility */
-.bg-yellow{
-    background-color: #DAA51E;
-}
-
-.bg-blue{
-    background-color: #00018B;
-}
-
-.bg-blue1{
-    background-color: #1E90FF;
-}
-
-.bg-lightblue{
-    background-color: #20B3AA;
-}
-
-.bg-lightblue1{
-    background-color: #7FFFD4;
-}
-
-.bg-pink{
-    background-color: #EF82ED;
-}
-
-.bg-pink1{
-    background-color: #FFC0CA;
-}
-
-.bg-pink2{
-    background-color: #FFB4C7;
-}
-
-.bg-pink2{
-    background-color: #F08180;
-}
-
-.bg-grey{
-    background-color: #D3D3D3;
-}
-
-.bg-green{
-    background-color: #218B21;
-}
-
-.bg-dark{
-    background-color: #23272A;
-}
-
-
-.full-col{
-    width: 100%;
-}
-
-.col-20{
-    width: 20%;
-}
-
-.col-40{
-    width: 40%;
-}
-
-.col-60{
-    width: 60%; 
-}
-
-.dashed{
-    border: 3px dashed black;
-}
-
-.dashed-white{
-    border: 3px dashed white;
-}
-
-.text-center{
-    text-align: center;
-}
-
-.text-right{
-    text-align: right;
-}
-
-
-.h-350{
-    min-height: 350px;
-}
-
-.h-500{
-    min-height: 500px;
-}
-
-.h-800{
-    min-height: 800px;
-}
-
-.py-50{
-    padding: 50px 0;
-}
-
-.py-20{
-    padding: 20px 0;
-}
-
-.p-8{
-    padding: 8px;
-}
-
-.m-50{
-    margin: 50px auto;
-}
-
-.m-250{
-    margin: 250px auto;
-}
-
-.mt-3{
-    margin-top: 3px
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Struttura Discord</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+</head>
+<body>
+   <header>
+    <div class="container  bg-yellow dashed d-flex">
+        <div class="col-20">Logo</div>
+        <div class="col-60 text-center">
+            <div class="header-content">
+                <ul>
+                    <li>link</li>
+                    <li>link</li>
+                    <li>link</li>
+                    <li>link</li>
+                    <li>link</li>
+                </ul>
+            </div>
+            
+    </div>
+        <div class="col-20 text-right">Login</div>
+    </div>
+   </header>
+   <main>
+        <div class="bg-blue">
+            <div class="container-sm py-50">
+                <div class="full-col bg-pink dashed h-350"></div>
+            </div>
+        </div>
+        <div class="container py-50 d-flex">
+            <div class="col-60 bg-blue1 h-500 dashed"></div>
+            <div class="col-40 bg-pink1 h-500 dashed"></div>
+        </div>
+        <div class="bg-grey">
+            <div class="container py-50 d-flex">
+                <div class="col-40 bg-pink1 h-500 dashed"></div>
+                <div class="col-60 bg-blue1 h-500 dashed"></div>
+            </div>
+        </div>
+        <div class="container py-50 d-flex">
+            <div class="col-60 bg-blue1 h-500 dashed"></div>
+            <div class="col-40 bg-pink1 h-500 dashed"></div>
+        </div>
+        <div class="bg-grey">
+            <div class="container py-50">
+                <div class="full-col bg-green h-800 dashed"></div>
+            </div>
+        </div>
+        <div class="bg-dark">
+            <div class="container py-50 d-flex">
+                <div class="col-40 bg-pink2 h-500 dashed"></div>
+                <div class="col-20 bg-lightblue h-500 dashed-white"></div>
+                <div class="col-20 bg-lightblue h-500 dashed-white"></div>
+                <div class="col-20 bg-lightblue h-500 dashed-white"></div>
+                <div class="col-20 bg-lightblue h-500 dashed-white"></div>
+            </div>
+        </div>
+   </main>
+   <footer class="bg-dark mt-3">
+    <div class="container bg-lightblue1 py-50 ">
+        <div class="full-col d-flex justify-center">
+            <div class="logo dashed bg-pink2 p-8">Logo</div>
+            <div class="btn dashed bg-pink2 p-8">Button</div>
+        </div>
+   </footer>
+</body>
+</html>
