[UPD] Header complete

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Struttura Discord</title>
+    <title>Discord</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,21 +12,25 @@
 </head>
 <body>
    <header>
-    <div class="container  bg-yellow dashed d-flex">
-        <div class="col-20">Logo</div>
+    <div class="container d-flex text-white space-between align-center">
+        <div class="col-20 d-flex align-center">
+            <img src="./img/logo.svg" alt="">
+        </div>
         <div class="col-60 text-center">
             <div class="header-content">
                 <ul>
-                    <li>link</li>
-                    <li>link</li>
-                    <li>link</li>
-                    <li>link</li>
-                    <li>link</li>
+                    <li>Scarica</li>
+                    <li>Perchè Discord</li>
+                    <li>Nitro</li>
+                    <li>Sicurezza</li>
+                    <li>Assistenza</li>
                 </ul>
             </div>
             
     </div>
-        <div class="col-20 text-right">Login</div>
+        <div class="col-20 d-flex justify-center">
+            <div class="btn btn-white">Accedi</div>
+        </div>
     </div>
    </header>
    <main>
@@ -66,7 +70,7 @@
    </main>
    <footer class="bg-dark mt-3">
     <div class="container bg-lightblue1 py-50 ">
-        <div class="full-col d-flex justify-center">
+        <div class="full-col d-flex space-between">
             <div class="logo dashed bg-pink2 p-8">Logo</div>
             <div class="btn dashed bg-pink2 p-8">Button</div>
         </div>
