--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
    <header>
-    <div class="container d-flex text-white space-between align-center">
+    <div class="container bg-blue d-flex text-white space-between align-center">
         <div class="col-20 d-flex align-center">
             <img src="./img/logo.svg" alt="">
         </div>
@@ -34,11 +34,18 @@
     </div>
    </header>
    <main>
-        <div class="bg-blue">
-            <div class="container-sm py-50">
-                <div class="full-col bg-pink dashed h-350"></div>
+        <div class="bg-blue jumbo">
+            <div class="container-sm py-100">
+                <div class="full-col  text-center tex text-white">
+                    <h1 class="jumbo-title">Il tuo posto per parlare</h1>
+                    <p class="jumbo-description font-size-20">Che tu faccia di un club scolastico, gruppo di gamer, comunita' artistica mondiale, o semplicemente di un piccolo gruppo di amici che buole passare il tempo assieme, Discord rende piu' facile chiacchierare ogni giorno e ritrovarsi piu' spesso.</p>
+                    <div class="d-flex justify-center font-size-20">
+                        <div class="btn btn-white mx-10"><i class="fa-solid fa-arrow-down"></i> Scarica per Mac</div>
+                        <div class="btn btn-black">Apri Discord nel tuo broswer</div>
+                    </div>
+                </div>
             </div>
-        </div>
+        </div>    
         <div class="container py-50 d-flex">
             <div class="col-60 bg-blue1 h-500 dashed"></div>
             <div class="col-40 bg-pink1 h-500 dashed"></div>
