--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="bg-blue jumbo">
             <div class="container-sm py-100">
                 <div class="full-col  text-center tex text-white">
-                    <h1 class="jumbo-title">Il tuo posto per parlare</h1>
+                    <div class="jumbo-title">Il tuo posto per parlare</div>
                     <p class="jumbo-description font-size-20">Che tu faccia di un club scolastico, gruppo di gamer, comunita' artistica mondiale, o semplicemente di un piccolo gruppo di amici che buole passare il tempo assieme, Discord rende piu' facile chiacchierare ogni giorno e ritrovarsi piu' spesso.</p>
                     <div class="d-flex justify-center font-size-20">
                         <div class="btn btn-white mx-10"><i class="fa-solid fa-arrow-down"></i> Scarica per Mac</div>
@@ -47,8 +47,12 @@
             </div>
         </div>    
         <div class="container py-50 d-flex">
-            <div class="col-60 bg-blue1 h-500 dashed"></div>
-            <div class="col-40 bg-pink1 h-500 dashed"></div>
+            <div class="col-60 bg-blue1 h-500 dashed">
+                <img src="./img/item1.svg" alt="">
+            </div>
+            <div class="col-40 bg-pink1 h-500 dashed">
+                
+            </div>
         </div>
         <div class="bg-grey">
             <div class="container py-50 d-flex">
