[UPD] Created section-title and section-description classes

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         <div class="bg-blue jumbo">
             <div class="container-sm py-100">
                 <div class="full-col  text-center tex text-white">
-                    <div class="jumbo-title">Il tuo posto per parlare</div>
-                    <p class="jumbo-description font-size-20">Che tu faccia di un club scolastico, gruppo di gamer, comunita' artistica mondiale, o semplicemente di un piccolo gruppo di amici che buole passare il tempo assieme, Discord rende piu' facile chiacchierare ogni giorno e ritrovarsi piu' spesso.</p>
+                    <div class="section-title">Il tuo posto per parlare</div>
+                    <p class="section-description font-size-20">Che tu faccia di un club scolastico, gruppo di gamer, comunita' artistica mondiale, o semplicemente di un piccolo gruppo di amici che buole passare il tempo assieme, Discord rende piu' facile chiacchierare ogni giorno e ritrovarsi piu' spesso.</p>
                     <div class="d-flex justify-center font-size-20">
                         <div class="btn btn-white mx-10"><i class="fa-solid fa-arrow-down"></i> Scarica per Mac</div>
                         <div class="btn btn-black">Apri Discord nel tuo broswer</div>
