[UPD] First section completed

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         <div class="bg-blue jumbo">
             <div class="container-sm py-100">
                 <div class="full-col  text-center tex text-white">
-                    <div class="section-title">Il tuo posto per parlare</div>
-                    <p class="section-description font-size-20">Che tu faccia di un club scolastico, gruppo di gamer, comunita' artistica mondiale, o semplicemente di un piccolo gruppo di amici che buole passare il tempo assieme, Discord rende piu' facile chiacchierare ogni giorno e ritrovarsi piu' spesso.</p>
+                    <div class="section-title font-weight-800">Il tuo posto per parlare</div>
+                    <p class="section-description font-size-20 line-h-big">Che tu faccia di un club scolastico, gruppo di gamer, comunita' artistica mondiale, o semplicemente di un piccolo gruppo di amici che buole passare il tempo assieme, Discord rende piu' facile chiacchierare ogni giorno e ritrovarsi piu' spesso.</p>
                     <div class="d-flex justify-center font-size-20">
                         <div class="btn btn-white mx-10"><i class="fa-solid fa-arrow-down"></i> Scarica per Mac</div>
                         <div class="btn btn-black">Apri Discord nel tuo broswer</div>
@@ -47,11 +47,12 @@
             </div>
         </div>    
         <div class="container py-50 d-flex">
-            <div class="col-60 bg-blue1 h-500 dashed">
+            <div class="col-60">
                 <img src="./img/item1.svg" alt="">
             </div>
-            <div class="col-40 bg-pink1 h-500 dashed">
-                
+            <div class="col-40">
+                <div class="section-title font-weight-600 p-18">Un luogo a invito con tutto lo spazio necessario per parlare</div>
+                <div class="section-description font-size-20">I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicmente parlare della tua giornata senza intasare una chat di gurppo.</div>    
             </div>
         </div>
         <div class="bg-grey">
