[UPD] Second Section

--- a/index.html
+++ b/index.html
@@ -57,17 +57,24 @@
         </div>
         <div class="bg-grey">
             <div class="container py-50 d-flex">
-                <div class="col-40 bg-pink1 h-500 dashed"></div>
-                <div class="col-60 bg-blue1 h-500 dashed"></div>
+                <div class="col-40">
+                    <div class="section-title font-weight-600 p-18">Dove trovarsi è facile</div>
+                    <div class="section-description font-size-20">Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei li e unirsi istantaneamente senza dover chiamare</div>    
+                </div>
+                <div class="col-60">
+                    <img src="./img/item2.svg" alt="">
+                </div>
             </div>
         </div>
-        <div class="container py-50 d-flex">
-            <div class="col-60 bg-blue1 h-500 dashed"></div>
-            <div class="col-40 bg-pink1 h-500 dashed"></div>
-        </div>
+        
+        
         <div class="bg-grey">
-            <div class="container py-50">
-                <div class="full-col bg-green h-800 dashed"></div>
+            <div class="container">
+                <div class="full-col text-center bored">
+                    <div class="section-title font-weight-600 p-18">Tecnologia affidabile per tenersi in contatto</div>
+                    <p class="section-description">Video e audio a bassa latenza di faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in straming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
+                    <img src="./img/item4-big.svg" alt="" srcset="">
+                </div>
             </div>
         </div>
         <div class="bg-dark">
