--- a/index.html
+++ b/index.html
@@ -66,7 +66,15 @@
                 </div>
             </div>
         </div>
-        
+        <div class="container py-50 d-flex">
+            <div class="col-60">
+                <img src="./img/item1.svg" alt="">
+            </div>
+            <div class="col-40">
+                <div class="section-title font-weight-600 p-18">Da pochi a un fandom</div>
+                <div class="section-description font-size-20">Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati, e molto altro.</div>    
+            </div>
+        </div>
         
         <div class="bg-grey">
             <div class="container">
