[UPD] Last section of MAIN

--- a/index.html
+++ b/index.html
@@ -78,10 +78,12 @@
         
         <div class="bg-grey">
             <div class="container">
-                <div class="full-col text-center bored">
-                    <div class="section-title font-weight-600 p-18">Tecnologia affidabile per tenersi in contatto</div>
-                    <p class="section-description">Video e audio a bassa latenza di faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in straming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
-                    <img src="./img/item4-big.svg" alt="" srcset="">
+                <div class="full-col text-center">
+                    <div class="content-section">
+                        <div class="section-title font-weight-600 px-18">Tecnologia affidabile per tenersi in contatto</div>
+                    <p class="section-description mx-100">Video e audio a bassa latenza di faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in straming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
+                    </div>
+                    <img class='one-col-img' src="./img/item4-big.svg" alt="" srcset="">
                 </div>
             </div>
         </div>
