--- a/index.html
+++ b/index.html
@@ -77,26 +77,31 @@
         </div>
         
         <div class="bg-grey">
-            <div class="container">
-                <div class="full-col text-center">
+            <div class="container py-100">
+                <div class="full-col text-center ">
                     <div class="content-section">
-                        <div class="section-title font-weight-600 px-18">Tecnologia affidabile per tenersi in contatto</div>
-                    <p class="section-description mx-100">Video e audio a bassa latenza di faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in straming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
+                        <div class="section-title font-weight-600">Tecnologia affidabile per tenersi in contatto</div>
+                    <p class="section-description ">Video e audio a bassa latenza di faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in straming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
                     </div>
                     <img class='one-col-img' src="./img/item4-big.svg" alt="" srcset="">
                 </div>
+                <div class="full-col text-center d-flex column-direction align-center">
+                    <div class="section-title font-weight-600 px-18 pre-footer">Pronto ad iniziare la tua avventura?</div>
+                    <div class="btn btn-blue col-20 text"><i class="fa-solid fa-arrow-down"></i> Scarica per Mac</div>
+                </div>
             </div>
         </div>
-        <div class="bg-dark">
-            <div class="container py-50 d-flex">
-                <div class="col-40 bg-pink2 h-500 dashed"></div>
-                <div class="col-20 bg-lightblue h-500 dashed-white"></div>
-                <div class="col-20 bg-lightblue h-500 dashed-white"></div>
-                <div class="col-20 bg-lightblue h-500 dashed-white"></div>
-                <div class="col-20 bg-lightblue h-500 dashed-white"></div>
-            </div>
-        </div>
+        
    </main>
+   <div class="bg-dark">
+    <div class="container py-50 d-flex">
+        <div class="col-40 bg-pink2 h-500 dashed"></div>
+        <div class="col-20 bg-lightblue h-500 dashed-white"></div>
+        <div class="col-20 bg-lightblue h-500 dashed-white"></div>
+        <div class="col-20 bg-lightblue h-500 dashed-white"></div>
+        <div class="col-20 bg-lightblue h-500 dashed-white"></div>
+    </div>
+</div>
    <footer class="bg-dark mt-3">
     <div class="container bg-lightblue1 py-50 ">
         <div class="full-col d-flex space-between">
