[UPD] First section of footer

--- a/index.html
+++ b/index.html
@@ -94,12 +94,67 @@
         
    </main>
    <div class="bg-dark">
-    <div class="container py-50 d-flex">
-        <div class="col-40 bg-pink2 h-500 dashed"></div>
-        <div class="col-20 bg-lightblue h-500 dashed-white"></div>
-        <div class="col-20 bg-lightblue h-500 dashed-white"></div>
-        <div class="col-20 bg-lightblue h-500 dashed-white"></div>
-        <div class="col-20 bg-lightblue h-500 dashed-white"></div>
+    <div class="container py-50 d-flex text-white">
+        <div class="col-40">
+            <div class="content">
+                <div class="footer-title">Il tuo posto per parlare</div>
+                <div class="language d-flex align-center mr-30 mt-20">
+                    <img class="img-flag mr-10 inline-block" src="./img/ita.png" alt="">
+                    <div class="mr-10">Italiano</div>
+                    <i class="inline-block fa-solid fa-caret-down "></i>
+                </div>
+                <div class="icons mt-20">
+                    <i class="fa-brands fa-twitter mr-10"></i>
+                    <i class="fa-brands fa-instagram mr-10"></i>
+                    <i class="fa-brands fa-facebook mr-10"></i>
+                    <i class="fa-brands fa-youtube mr-10"></i>
+                </div>
+            </div>
+        </div>
+        <div class="col-20">
+            <ul class="menu-column">
+                <li class="menu-item">Prodotto</li>
+                <li class="menu-item">Scarica</li>
+                <li class="menu-item">Perche' Discord</li>
+                <li class="menu-item">Nitro</li>
+                <li class="menu-item">Sicurezza</li>
+                <li class="menu-item">Assistenza</li>
+            </ul>
+        </div>
+        <div class="col-20">
+            <ul class="menu-column">
+                <li class="menu-item">Compagnia</li>
+                <li class="menu-item">Chi siamo</li>
+                <li class="menu-item">Lavora con noi</li>
+                <li class="menu-item">Marchio</li>
+                <li class="menu-item">Redazione</li>
+                <li class="menu-item">Negozio</li>
+            </ul>
+        </div>
+        <div class="col-20">
+            <ul class="menu-column">
+                <li class="menu-item">Risorse</li>
+                <li class="menu-item">Scarica</li>
+                <li class="menu-item">Perche' Discord</li>
+                <li class="menu-item">Nitro</li>
+                <li class="menu-item">Sicurezza</li>
+                <li class="menu-item">Assistenza</li>
+                <li class="menu-item">Perche' Discord</li>
+                <li class="menu-item">Nitro</li>
+                <li class="menu-item">Sicurezza</li>
+                <li class="menu-item">Assistenza</li>
+            </ul>
+        </div>
+        <div class="col-20">
+            <ul class="menu-column">
+                <li class="menu-item">Norme</li>
+                <li class="menu-item">Scarica</li>
+                <li class="menu-item">Perche' Discord</li>
+                <li class="menu-item">Nitro</li>
+                <li class="menu-item">Sicurezza</li>
+                <li class="menu-item">Assistenza</li>
+            </ul>
+        </div>
     </div>
 </div>
    <footer class="bg-dark mt-3">
