[UPD] Complete second footer section

--- a/index.html
+++ b/index.html
@@ -157,11 +157,13 @@
         </div>
     </div>
 </div>
-   <footer class="bg-dark mt-3">
-    <div class="container bg-lightblue1 py-50 ">
-        <div class="full-col d-flex space-between">
-            <div class="logo dashed bg-pink2 p-8">Logo</div>
-            <div class="btn dashed bg-pink2 p-8">Button</div>
+   <footer class="bg-dark ">
+    <div class="container py-50 mt-blue">
+        <div class=" d-flex space-between">
+            <img src="./img/logo.svg" alt="">
+            <div class="btn-footer btn-blue col-20 text-center">
+                Registrati
+            </div>
         </div>
    </footer>
 </body>
