--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             
     </div>
         <div class="col-20 d-flex justify-center">
-            <div class="btn btn-white">Accedi</div>
+            <div class="btn cursor-pointer btn-white">Accedi</div>
         </div>
     </div>
    </header>
@@ -40,8 +40,8 @@
                     <div class="section-title font-weight-800">Il tuo posto per parlare</div>
                     <p class="section-description font-size-20 line-h-big">Che tu faccia di un club scolastico, gruppo di gamer, comunita' artistica mondiale, o semplicemente di un piccolo gruppo di amici che buole passare il tempo assieme, Discord rende piu' facile chiacchierare ogni giorno e ritrovarsi piu' spesso.</p>
                     <div class="d-flex justify-center font-size-20">
-                        <div class="btn btn-white mx-10"><i class="fa-solid fa-arrow-down"></i> Scarica per Mac</div>
-                        <div class="btn btn-black">Apri Discord nel tuo broswer</div>
+                        <div class="btn cursor-pointer btn-white mx-10"><i class="fa-solid fa-arrow-down"></i> Scarica per Mac</div>
+                        <div class="btn cursor-pointer btn-black">Apri Discord nel tuo broswer</div>
                     </div>
                 </div>
             </div>
@@ -87,7 +87,7 @@
                 </div>
                 <div class="full-col text-center d-flex column-direction align-center">
                     <div class="section-title font-weight-600 px-18 pre-footer">Pronto ad iniziare la tua avventura?</div>
-                    <div class="btn btn-blue col-20 text"><i class="fa-solid fa-arrow-down"></i> Scarica per Mac</div>
+                    <div class="btn cursor-pointer btn-blue col-20 text"><i class="fa-solid fa-arrow-down"></i> Scarica per Mac</div>
                 </div>
             </div>
         </div>
@@ -103,7 +103,7 @@
                     <div class="mr-10">Italiano</div>
                     <i class="inline-block fa-solid fa-caret-down "></i>
                 </div>
-                <div class="icons mt-20">
+                <div class="icons mt-20 cursor-pointer">
                     <i class="fa-brands fa-twitter mr-10"></i>
                     <i class="fa-brands fa-instagram mr-10"></i>
                     <i class="fa-brands fa-facebook mr-10"></i>
