[BONUS] href to links and buttons

--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
         <div class="col-60 text-center">
             <div class="header-content">
                 <ul>
-                    <li>Scarica</li>
-                    <li>Perchè Discord</li>
-                    <li>Nitro</li>
-                    <li>Sicurezza</li>
-                    <li>Assistenza</li>
+                    <li><a href="./download">Scarica</a></li>
+                    <li><a href="./perche-discord">Perchè Discord</a></li>
+                    <li><a href="./nitro">Nitro</a></li>
+                    <li><a href="./sicurezza">Sicurezza</a></li>
+                    <li><a href="./assistenza">Assistenza</a></li>
                 </ul>
             </div>
             
     </div>
         <div class="col-20 d-flex justify-center">
-            <div class="btn cursor-pointer btn-white">Accedi</div>
+            <div class="btn cursor-pointer btn-white"><a href="./login">Accedi</a></div>
         </div>
     </div>
    </header>
@@ -40,8 +40,9 @@
                     <div class="section-title font-weight-800">Il tuo posto per parlare</div>
                     <p class="section-description font-size-20 line-h-big">Che tu faccia di un club scolastico, gruppo di gamer, comunita' artistica mondiale, o semplicemente di un piccolo gruppo di amici che buole passare il tempo assieme, Discord rende piu' facile chiacchierare ogni giorno e ritrovarsi piu' spesso.</p>
                     <div class="d-flex justify-center font-size-20">
-                        <div class="btn cursor-pointer btn-white mx-10"><i class="fa-solid fa-arrow-down"></i> Scarica per Mac</div>
-                        <div class="btn cursor-pointer btn-black">Apri Discord nel tuo broswer</div>
+                        <div class="btn cursor-pointer btn-white mx-10"><i class="fa-solid fa-arrow-down"></i><a href="./download">Scarica per Mac</a>
+                        </div>
+                        <div class="btn cursor-pointer btn-black"><a href="./open-broswer">Apri Discord nel tuo broswer</a></div>
                     </div>
                 </div>
             </div>
@@ -87,7 +88,7 @@
                 </div>
                 <div class="full-col text-center d-flex column-direction align-center">
                     <div class="section-title font-weight-600 px-18 pre-footer">Pronto ad iniziare la tua avventura?</div>
-                    <div class="btn cursor-pointer btn-blue col-20 text"><i class="fa-solid fa-arrow-down"></i> Scarica per Mac</div>
+                    <div class="btn cursor-pointer btn-blue col-20 text"><i class="fa-solid fa-arrow-down"></i><a href="./download">Scarica per Mac</a></div>
                 </div>
             </div>
         </div>
@@ -104,55 +105,56 @@
                     <i class="inline-block fa-solid fa-caret-down "></i>
                 </div>
                 <div class="icons mt-20 cursor-pointer">
-                    <i class="fa-brands fa-twitter mr-10"></i>
-                    <i class="fa-brands fa-instagram mr-10"></i>
-                    <i class="fa-brands fa-facebook mr-10"></i>
-                    <i class="fa-brands fa-youtube mr-10"></i>
+                    <a href="twitter.com/discord"><i class="fa-brands fa-twitter mr-10"></i></a>
+                    <a href="instagram.com/discord"><i class="fa-brands fa-instagram mr-10"></i></a>
+                    <a href="facebook.com/discord"><i class="fa-brands fa-facebook mr-10"></i></a>
+                    <a href="youtube.com/discord"><i class="fa-brands fa-youtube mr-10"></i></a>
                 </div>
             </div>
         </div>
         <div class="col-20">
             <ul class="menu-column">
-                <li class="menu-item">Prodotto</li>
-                <li class="menu-item">Scarica</li>
-                <li class="menu-item">Perche' Discord</li>
-                <li class="menu-item">Nitro</li>
-                <li class="menu-item">Sicurezza</li>
-                <li class="menu-item">Assistenza</li>
+                <li class="menu-item"><a href="./prodotto">Prodotto</a></li>
+                <li class="menu-item"><a href="./download">Scarica</a></li>
+                <li class="menu-item"><a href="./perche-discord">Perche' Discord</a></li>
+                <li class="menu-item"><a href="./nitro">Nitro</a></li>
+                <li class="menu-item"><a href="./sicurezza">Sicurezza</a></li>
+                <li class="menu-item"><a href="./assistenza">Assistenza</a></li>
             </ul>
         </div>
         <div class="col-20">
             <ul class="menu-column">
-                <li class="menu-item">Compagnia</li>
-                <li class="menu-item">Chi siamo</li>
-                <li class="menu-item">Lavora con noi</li>
-                <li class="menu-item">Marchio</li>
-                <li class="menu-item">Redazione</li>
-                <li class="menu-item">Negozio</li>
+                <li class="menu-item"><a href="./compagnia">Compagnia</a></li>
+                <li class="menu-item"><a href="./chi-siamo">Chi siamo</a></li>
+                <li class="menu-item"><a href="./careers">Lavora con noi</a></li>
+                <li class="menu-item"><a href="./marchio">Marchio</a></li>
+                <li class="menu-item"><a href="./redazione">Redazione</a></li>
+                <li class="menu-item"><a href="./shop">Negozio</a></li>
             </ul>
         </div>
         <div class="col-20">
             <ul class="menu-column">
-                <li class="menu-item">Risorse</li>
-                <li class="menu-item">Scarica</li>
-                <li class="menu-item">Perche' Discord</li>
-                <li class="menu-item">Nitro</li>
-                <li class="menu-item">Sicurezza</li>
-                <li class="menu-item">Assistenza</li>
-                <li class="menu-item">Perche' Discord</li>
-                <li class="menu-item">Nitro</li>
-                <li class="menu-item">Sicurezza</li>
-                <li class="menu-item">Assistenza</li>
+                <li class="menu-item"><a href="./risorse">Risorse</a></li>
+                <li class="menu-item"><a href="./download">Scarica</a></li>
+                <li class="menu-item"><a href="./perche-discord">Perche' Discord</a></li>
+                <li class="menu-item"><a href="./nitro">Nitro</a></li>
+                <li class="menu-item"><a href="./sicurezza">Sicurezza</a></li>
+                <li class="menu-item"><a href="./assistenza">Assistenza</a></li>
+                <li class="menu-item"><a href="./download">Scarica</a></li>
+                <li class="menu-item"><a href="./perche-discord">Perche' Discord</a></li>
+                <li class="menu-item"><a href="./nitro">Nitro</a></li>
+                <li class="menu-item"><a href="./sicurezza">Sicurezza</a></li>
+                <li class="menu-item"><a href="./assistenza">Assistenza</a></li>
             </ul>
         </div>
         <div class="col-20">
             <ul class="menu-column">
-                <li class="menu-item">Norme</li>
-                <li class="menu-item">Scarica</li>
-                <li class="menu-item">Perche' Discord</li>
-                <li class="menu-item">Nitro</li>
-                <li class="menu-item">Sicurezza</li>
-                <li class="menu-item">Assistenza</li>
+                <li class="menu-item"><a href="./norme">Norme</a></li>
+                <li class="menu-item"><a href="./download">Scarica</a></li>
+                <li class="menu-item"><a href="./perche-discord">Perche' Discord</a></li>
+                <li class="menu-item"><a href="./nitro">Nitro</a></li>
+                <li class="menu-item"><a href="./sicurezza">Sicurezza</a></li>
+                <li class="menu-item"><a href="./assistenza">Assistenza</a></li>
             </ul>
         </div>
     </div>
@@ -162,7 +164,7 @@
         <div class=" d-flex space-between">
             <img src="./img/logo.svg" alt="">
             <div class="btn-footer btn-blue col-20 text-center">
-                Registrati
+                <a href="./sign-up">Registrati</a>
             </div>
         </div>
    </footer>
